# BackEnd/api.yaml
@@ -208,6 +208,57 @@ paths:
                   img:
                     type: string
                     format: base64
+  /stock:
+    post:
+      tags:
+        - stock
+      summary: Nhập thêm sản phẩm mới (chưa có)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                product_id:
+                  type: string
+                  example: 'd290f1ee-6c54-4b01-90e6-d701748f0851'
+                quantity:
+                  type: integer
+                  example: 2
+                size:
+                  type: string
+                  example: 'XL'
+                color:
+                  type: string
+                  example: 'black'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Stock'
+        '500':
+          description:  Internal Server Error
+  /stock/{product_id}:
+      put:
+        tags:
+          - stock
+        summary: Nhập thêm/Xóa bớt sản phẩm đã có 
+        parameters:
+          - in: path
+            name: product_id
+            required: true
+            schema:
+              type: string
+              format: uuid
+        responses:
+          '200':
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Stock'
 components:
   schemas:
     Supplier:
@@ -276,3 +327,18 @@ components:
         img_type:
           type: string
           enum: ['png', 'jpeg', 'jpg', 'webp']
+    Stock:
+      type: object
+      required:
+        - product_id
+      properties:
+        product_id:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        quantity:
+          type: integer
+        color:
+          type: string
+        size:
+          type: string
